name:                Earley
version:             0.8.2
synopsis:            Parsing all context-free grammars using Earley's algorithm.
description:         See <https://www.github.com/ollef/Earley> for more
                     information and
                     <https://github.com/ollef/Earley/tree/master/examples> for
                     examples.
license:             BSD3
license-file:        LICENSE
author:              Olle Fredriksson
maintainer:          fredriksson.olle@gmail.com
copyright:           (c) 2014-2015 Olle Fredriksson
category:            Parsing
build-type:          Simple
cabal-version:       >=1.10

Flag Examples
  Description: "Build examples"
  Default:     False

source-repository    head
  type:     git
  location: https://github.com/ollef/Earley.git

library
  exposed-modules:     Text.Earley.Derived, Text.Earley.Grammar, Text.Earley.Mixfix, Text.Earley.Parser Text.Earley
  -- other-modules:
  build-depends:       base >=4.7 && <4.9, ListLike >=4.1
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -Wall -funbox-strict-fields

executable earley-english
  if !flag(examples)
    buildable:         False
  main-is:             English.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, Earley, unordered-containers >=0.2

executable earley-expr
  if !flag(examples)
    buildable:         False
  main-is:             Expr.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, Earley

executable earley-expr2
  if !flag(examples)
    buildable:         False
  main-is:             Expr2.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, Earley

executable earley-mixfix
  if !flag(examples)
    buildable:         False
  main-is:             Mixfix.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, Earley, unordered-containers

executable earley-very-ambiguous
  if !flag(examples)
    buildable:         False
  main-is:             VeryAmbiguous.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, Earley

executable earley-words
  if !flag(examples)
    buildable:         False
  main-is:             Words.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, Earley

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      . bench
  main-is:             BenchAll.hs
  build-depends:       base, deepseq, criterion >=1.1, parsec >=3.1, ListLike
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -O2
                       -fmax-simplifier-iterations=10
                       -fdicts-cheap
                       -fspec-constr-count=6

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -Wall
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base, Earley, tasty >=0.10, tasty-quickcheck >=0.8, tasty-hunit >= 0.9
