name:                Earley
version:             0.11.0.1
synopsis:            Parsing all context-free grammars using Earley's algorithm.
description:         See <https://www.github.com/ollef/Earley> for more
                     information and
                     <https://github.com/ollef/Earley/tree/master/examples> for
                     examples.
license:             BSD3
license-file:        LICENSE
author:              Olle Fredriksson
maintainer:          fredriksson.olle@gmail.com
copyright:           (c) 2014-2016 Olle Fredriksson
category:            Parsing
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC ==7.6.*, GHC==7.8.*, GHC==7.10.*, GHC==8.0.*, GHC==8.1.*

extra-source-files:
                      README.md
                      CHANGELOG.md

Flag Examples
  Description: "Build examples"
  Default:     False
  Manual:      True

source-repository    head
  type:     git
  location: https://github.com/ollef/Earley.git

library
  exposed-modules:
                       Text.Earley,
                       Text.Earley.Derived,
                       Text.Earley.Language,
                       Text.Earley.Grammar,
                       Text.Earley.Internal,
                       Text.Earley.Mixfix,
                       Text.Earley.Parser
  build-depends:       base >=4.6 && <4.10, ListLike >=4.1, QuickCheck >= 2.8
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -funbox-strict-fields

executable earley-english
  if !flag(examples)
    buildable:         False
  main-is:             English.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, Earley, unordered-containers >=0.2

executable earley-expr
  if !flag(examples)
    buildable:         False
  main-is:             Expr.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, Earley

executable earley-expr2
  if !flag(examples)
    buildable:         False
  main-is:             Expr2.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, Earley

executable earley-mixfix
  if !flag(examples)
    buildable:         False
  main-is:             Mixfix.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, Earley, unordered-containers

executable earley-roman-numerals
  if !flag(examples)
    buildable:         False
  main-is:             RomanNumerals.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, Earley

executable earley-very-ambiguous
  if !flag(examples)
    buildable:         False
  main-is:             VeryAmbiguous.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, Earley

executable earley-words
  if !flag(examples)
    buildable:         False
  main-is:             Words.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, Earley

executable earley-infinite
  if !flag(examples)
    buildable:         False
  main-is:             Infinite.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, Earley

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      . bench
  main-is:             BenchAll.hs
  build-depends:       base, deepseq, criterion >=1.1, parsec >=3.1, ListLike
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       Text.Earley,
                       Text.Earley.Derived,
                       Text.Earley.Grammar,
                       Text.Earley.Internal,
                       Text.Earley.Parser

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wall
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base, Earley, tasty >=0.10, tasty-quickcheck >=0.8, tasty-hunit >= 0.9
  other-modules:       Empty,
                       Expr,
                       InlineAlts,
                       Issue11,
                       Issue14,
                       Mixfix,
                       Optional,
                       ReversedWords,
                       VeryAmbiguous
